Java25NewFeatures(VirtualThreadExample): Added VirtualThreadExample to reame